# IncidentOps-OpenEnv

./: .env.example  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py  graders.py  rules.py  scenarios.py
server/templates/: dashboard.html
tests/: test_env.py  test_graders.py  test_integration.py  test_rules.py  test_tasks.py
